# pescan

./: Cargo.toml  flake.nix
benches/: full.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  sidebar-items.js  src-files.js
docs/args/: index.html  struct.Args.html
docs/cache/: sidebar-items.js  struct.Api.html  struct.Cache.html
docs/display/: fn.create_tables.html  fn.format_url.html  sidebar-items.js
docs/output/: enum.Format.html  sidebar-items.js  struct.Details.html  struct.Output.html  struct.SuspectImport.html
docs/pescan/: all.html  fn.flatten_imports.html  fn.main.html  index.html  sidebar-items.js
docs/pescan/args/: index.html  struct.Args.html
docs/pescan/cache/: index.html  struct.Api.html  struct.Cache.html
docs/pescan/display/: fn.create_tables.html  index.html
docs/pescan/output/: enum.Format.html  fn.create_tables.html  fn.format_url.html  index.html  sidebar-items.js  struct.Details.html  struct.Output.html  struct.SuspectImport.html
docs/search.desc/pescan/: pescan-desc-0-.js
docs/src/pescan/: args.rs.html  cache.rs.html  display.rs.html  lib.rs.html  main.rs.html  output.rs.html
docs/trait.impl/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js  trait.ValueEnum.js
docs/trait.impl/core/clone/: trait.Clone.js
docs/trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
docs/trait.impl/core/default/: trait.Default.js
docs/trait.impl/core/hash/: trait.Hash.js
src/: args.rs  cache.rs  display.rs  fetch.rs  lib.rs  main.rs  output.rs
(+9 files in other folders)
