[package]
name = "pescan"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = [ "derive" ] }
camino = "1.1.9"
goblin = "0.9.3"
scraper = "0.23.1"
tokio = { version = "1.44.1", features = [ "full" ] }
reqwest = { version = "0.12.15" }
tabled = { version = "0.18.0", features = [ "ansi" ] }
