[package]
name = "pescan"
version = "2.0.0"
edition = "2024"
authors = [ "caret_" ]
description = "static analysis tool for PE files via API import analysis. GPL-3.0-or-later."
default-run = "pescan"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = [ "derive" ] }
camino = "1.1.9"
goblin = "0.9.3"
scraper = "0.23.1"
tokio = { version = "1.44.1", features = [ "full" ] }
reqwest = { version = "0.12.15", features = [ "cookies", "http2" ] }
dirs = "6.0.0"
indicatif = "0.17.11"
tabled = { version = "0.18.0", features = [ "ansi" ] }
serde = { version = "1.0.219", features = [ "derive" ] }
serde_with = "3.12.0"
serde_json = "1.0.140"
serde_yml = "0.0.12"
rmp-serde = "1.3.0"
toml = "0.8.20"
csv = "1.3.1"
